web/css/minimal.css
/*
 Author: Brett Crawford <brett.crawford@temple.edu>
 File:   minimal.css
 Date:   Feb 6, 2015
 Desc:
*/

/*
 RasPi Logo Colors
 Magenta:       bd1143
 Light Magenta: bd7b8e
 Green:         76a928
 Light Green:   98a97f
*/

#pacman-canvas {
    position: absolute;
    top: 0px;
    left: 0px;
    z-index: 2;
}

#pacman-exit-button {
    position: absolute;
    top: 10px;
    left: 10px;
    z-index: 3;
}

body {
    font-family: "Bitter", "Lucida Console";
    font-size: 16px;
    letter-spacing: 1px;
    line-height: 180%;
    background-color: #d6d6d6;
    background-attachment: fixed;
}

.container {
    width: 85%;  
    margin: auto;
    min-width: 750px;
}

.title-container {
    height: 70px;
    width: 400px;
    color: black;
    font-size: 19px;
    background-color: white;
    margin-bottom: 10px;
}

.title-img {
    float: left;
    padding-top: 10px;
    padding-left: 15px;
}

.title-img img {
    position: absolute;
    height: 50px;
    width: 39px;
    z-index: 1;
}

.title {
    float:left;
    font-weight: bold;
    font-size: 40px;
    padding-top: 20px;
    padding-left: 45px;
}

.title-desc {
    height: 0px;
    width: 0px;
    visibility: collapse;
}

.nav {
    padding-left: 0px;
}

.tab {
    float: left;
    position: relative;
    margin-left: 0px;
    margin-right: 0px;
    padding-top: 10px;
    padding-bottom: 10px;
    width: 14.2857%;
    min-width: 60px; 
    color: #bd1143;
    font-size: 18px;
    font-weight: bold;
    text-align: center;
    background-color: white;
    background-color: rgba(255, 255, 255, 0.8);
}

.tab:hover { 
    background: -webkit-linear-gradient(white, rgba(255, 255, 255, 0.8));
    background: -o-linear-gradient(white, rgba(255, 255, 255, 0.8));
    background: -moz-linear-gradient(white, rgba(255, 255, 255, 0.8));
    background: linear-gradient(white, rgba(255, 255, 255, 0.8));
}

.tab-link,
.tab-dropdown-item-link {
    position: absolute; 
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    z-index: 1;
}

.tab-connector-unselected {
    position: absolute;
    width: 100%;
    height: 2px;
    bottom: 0;
    left: 0;
    background-color: gray;
    z-index: 1;
}

.tab-divider {
    position: absolute;
    width: 2px;
    height: 100%;
    top: 0;
    right: 0;
    background-color: gray;
    z-index: 1;
}

.tab-dropdown-menu {
    background-color: #d6d6d6;
    position: absolute;
    display: none;
    width: 99%;
    left: 0.5px;
    top: 47px;
    z-index: 1;
}

.tab-with-dropdown:hover .tab-dropdown-menu,
.tab-dropdown-menu:hover .tab-dropdown-menu {
    display: block;
}

.tab-dropdown-item {
    position: relative;
    border-left: thin solid gray;
    border-bottom: thin solid gray;
    border-right: thin solid gray;
    background-color: white;
    background-color: rgba(255, 255, 255, 0.8);
}

.tab-dropdown-item:hover {
    background: -webkit-linear-gradient(white, rgba(255, 255, 255, 0.8));
    background: -o-linear-gradient(white, rgba(255, 255, 255, 0.8));
    background: -moz-linear-gradient(white, rgba(255, 255, 255, 0.8));
    background: linear-gradient(white, rgba(255, 255, 255, 0.8));
}

.newLine {
    clear: both;
}

.raspberrypi-img {
    float: left;
    margin-top: 5px;
    margin-right: 30px;
    margin-bottom: 20px;
}

.raspberrypidiagram-img {
    float: right;
    margin-left: 30px;
    margin-top: 20px;
    margin-bottom: 20px;
}

.content {
    padding: 10px;
    padding-left: 35px;
    padding-right: 35px;
    background-color: white;
    background-color: rgba(255, 255, 255, 0.8);
}

.content-text {
    color: black;
}

.indented-para {
    padding-left: 20px;
}

.table-striped > tbody > tr:nth-of-type(2n+1) {
    background-color: rgba(230, 230, 230, 0.8);
}

.theme-chooser {
    color: black;
    font-size: 12px;
}

.raspi-popup {
}

.footer {
    text-align: center;
    margin-top: 5px;
    padding: 5px;
}

.footer-text {
    color: black;
}

.footer-theme {
    float:left;
    padding-left: 30px;
}

.deadspace {
    height: 70px;
}

